--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+   <link rel="stylesheet" href="style.css" />
   <title>Work Day Scheduler</title>
 </head>
 
@@ -23,7 +23,9 @@
     <div class="row ">
       <div class="time-block col-sm-2 hour" value="9">9AM</div>
       <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea1" rows="3"></textarea>
-      <div class="saveBtn col-sm-2"></div>
+      <div class="saveBtn col-sm-2">
+        <i class="far fa-save fa-2x"></i>
+      </div>
     </div>
     <div class="row ">
       <div class="time-block col-sm-2 hour" value="10">10AM</div>
@@ -70,6 +72,9 @@
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="moment.js"></script>
+  <script src="script.js"></script>
+
 </body>
 
 </html>
