color changes added, only need local storage piece

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -21,51 +21,67 @@
   </header>
   <div class="container">
     <div class="row ">
-      <div class="time-block col-sm-2 hour" value="9">9AM</div>
+      <div class="time-block col-sm-2 hour" data-value="9">9AM</div>
       <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea1" rows="3"></textarea>
       <div class="saveBtn col-sm-2">
         <i class="far fa-save fa-2x"></i>
       </div>
     </div>
     <div class="row ">
-      <div class="time-block col-sm-2 hour" value="10">10AM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea1" rows="3"></textarea>
-      <div class="saveBtn col-sm-2"></div>
+      <div class="time-block col-sm-2 hour" data-value="10">10AM</div>
+      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea2" rows="3"></textarea>
+      <div class="saveBtn col-sm-2">
+          <i class="far fa-save fa-2x"></i>
+      </div>
     </div>
     <div class="row ">
-      <div class="time-block col-sm-2 hour" value="11">11AM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea1" rows="3"></textarea>
-      <div class="saveBtn col-sm-2"></div>
+      <div class="time-block col-sm-2 hour" data-value="11">11AM</div>
+      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea3" rows="3"></textarea>
+      <div class="saveBtn col-sm-2">
+          <i class="far fa-save fa-2x"></i>
+      </div>
     </div>
     <div class="row ">
-      <div class="time-block col-sm-2 hour" value="12">12PM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea1" rows="3"></textarea>
-      <div class="saveBtn col-sm-2"></div>
+      <div class="time-block col-sm-2 hour" data-value="12">12PM</div>
+      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea4" rows="3"></textarea>
+      <div class="saveBtn col-sm-2">
+          <i class="far fa-save fa-2x"></i>
+      </div>
     </div>
     <div class="row ">
-      <div class="time-block col-sm-2 hour" value="1">1PM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea1" rows="3"></textarea>
-      <div class="saveBtn col-sm-2"></div>
+      <div class="time-block col-sm-2 hour" data-value="13">1PM</div>
+      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea5" rows="3"></textarea>
+      <div class="saveBtn col-sm-2">
+          <i class="far fa-save fa-2x"></i>
+      </div>
     </div>
     <div class="row ">
-      <div class="time-block col-sm-2 hour" value="2">2PM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea1" rows="3"></textarea>
-      <div class="saveBtn col-sm-2"></div>
+      <div class="time-block col-sm-2 hour" data-value="14">2PM</div>
+      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea6" rows="3"></textarea>
+      <div class="saveBtn col-sm-2">
+          <i class="far fa-save fa-2x"></i>
+      </div>
     </div>
     <div class="row ">
-      <div class="time-block col-sm-2 hour" value="3">3PM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea1" rows="3"></textarea>
-      <div class="saveBtn col-sm-2"></div>
+      <div class="time-block col-sm-2 hour" data-value="15">3PM</div>
+      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea7" rows="3"></textarea>
+      <div class="saveBtn col-sm-2">
+          <i class="far fa-save fa-2x"></i>
+      </div>
     </div>
     <div class="row ">
-      <div class="time-block col-sm-2 hour" value="4">4PM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea1" rows="3"></textarea>
-      <div class="saveBtn col-sm-2"></div>
+      <div class="time-block col-sm-2 hour" data-value="16">4PM</div>
+      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea8" rows="3"></textarea>
+      <div class="saveBtn col-sm-2">
+          <i class="far fa-save fa-2x"></i>
+      </div>
     </div>
     <div class="row ">
-      <div class="time-block col-sm-2 hour" value="5">5PM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea1" rows="3"></textarea>
-      <div class="saveBtn col-sm-2"></div>
+      <div class="time-block col-sm-2 hour" data-value="17">5PM</div>
+      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea9" rows="3"></textarea>
+      <div class="saveBtn col-sm-2">
+          <i class="far fa-save fa-2x"></i>
+      </div>
     </div>
 
   </div>
