--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css" />
   <title>Work Day Scheduler</title>
 </head>
 
@@ -22,65 +22,65 @@
   <div class="container">
     <div class="row ">
       <div class="time-block col-sm-2 hour" data-value="9">9AM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea1" rows="3"></textarea>
+      <textarea class="form-control textarea col-sm-8" id="textArea9" rows="3"></textarea>
       <div class="saveBtn col-sm-2">
-        <i class="far fa-save fa-2x"></i>
+        <i class="far fa-save fa-2x saveBtn9"></i>
       </div>
     </div>
     <div class="row ">
       <div class="time-block col-sm-2 hour" data-value="10">10AM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea2" rows="3"></textarea>
+      <textarea class="form-control textarea col-sm-8" id="textArea10" rows="3"></textarea>
       <div class="saveBtn col-sm-2">
-          <i class="far fa-save fa-2x"></i>
+        <i class="far fa-save fa-2x saveBtn10"></i>
       </div>
     </div>
     <div class="row ">
       <div class="time-block col-sm-2 hour" data-value="11">11AM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea3" rows="3"></textarea>
+      <textarea class="form-control textarea col-sm-8" id="textArea11" rows="3"></textarea>
       <div class="saveBtn col-sm-2">
-          <i class="far fa-save fa-2x"></i>
+        <i class="far fa-save fa-2x saveBtn11"></i>
       </div>
     </div>
     <div class="row ">
       <div class="time-block col-sm-2 hour" data-value="12">12PM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea4" rows="3"></textarea>
+      <textarea class="form-control textarea col-sm-8" id="textArea12" rows="3"></textarea>
       <div class="saveBtn col-sm-2">
-          <i class="far fa-save fa-2x"></i>
+        <i class="far fa-save fa-2x saveBtn12"></i>
       </div>
     </div>
     <div class="row ">
       <div class="time-block col-sm-2 hour" data-value="13">1PM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea5" rows="3"></textarea>
+      <textarea class="form-control textarea col-sm-8" id="textArea13" rows="3"></textarea>
       <div class="saveBtn col-sm-2">
-          <i class="far fa-save fa-2x"></i>
+        <i class="far fa-save fa-2x saveBtn13"></i>
       </div>
     </div>
     <div class="row ">
       <div class="time-block col-sm-2 hour" data-value="14">2PM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea6" rows="3"></textarea>
+      <textarea class="form-control textarea col-sm-8" id="textArea14" rows="3"></textarea>
       <div class="saveBtn col-sm-2">
-          <i class="far fa-save fa-2x"></i>
+        <i class="far fa-save fa-2x saveBtn14"></i>
       </div>
     </div>
     <div class="row ">
       <div class="time-block col-sm-2 hour" data-value="15">3PM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea7" rows="3"></textarea>
+      <textarea class="form-control textarea col-sm-8" id="textArea15" rows="3"></textarea>
       <div class="saveBtn col-sm-2">
-          <i class="far fa-save fa-2x"></i>
+        <i class="far fa-save fa-2x saveBtn15"></i>
       </div>
     </div>
     <div class="row ">
       <div class="time-block col-sm-2 hour" data-value="16">4PM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea8" rows="3"></textarea>
+      <textarea class="form-control textarea col-sm-8" id="textArea16" rows="3"></textarea>
       <div class="saveBtn col-sm-2">
-          <i class="far fa-save fa-2x"></i>
+        <i class="far fa-save fa-2x saveBtn16"></i>
       </div>
     </div>
     <div class="row ">
       <div class="time-block col-sm-2 hour" data-value="17">5PM</div>
-      <textarea class="form-control textarea col-sm-8" id="exampleFormControlTextarea9" rows="3"></textarea>
+      <textarea class="form-control textarea col-sm-8" id="textArea17" rows="3"></textarea>
       <div class="saveBtn col-sm-2">
-          <i class="far fa-save fa-2x"></i>
+        <i class="far fa-save fa-2x saveBtn17"></i>
       </div>
     </div>
 
